# apigw

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
echo/: README.md
echo/echo-lambda/: Cargo.toml  README.md
echo/echo-lambda/src/: main.rs
echo/infra/: cdk.context.json  package-lock.json  package.json
echo/infra/lib/: echo-stack.ts  infra-stack.ts
ipv6/: Cargo.toml
ipv6/infra/: package-lock.json
ipv6/infra/lib/: ipv6-stack.ts
ipv6/src/: main.rs
mock/: cdk.json  package-lock.json  package.json
mock/lib/: mock-stack.ts
mock/test/: mock.test.ts
vtl-headers/: README.md
vtl-headers/infra/: package-lock.json  package.json
vtl-headers/infra/lib/: vtl-headers-stack.ts
vtl-headers/vtl-lambda/: Cargo.toml
