[package]
name = "ipv6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = { version = "0.15.1" }
metrics = "0.23.0"
metrics_cloudwatch_embedded = "0.5.0"
rustc-serialize = "0.3.24"
lambda_runtime = "0.11.3"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
http = "1.0.0"
trust-dns-resolver = "*"